--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://mjhall3.github.io/blog/'
-title = "Michael Hall's Book Review Site"
+title = "TITLE"
 theme = 'hugo-universal-theme'
 languageCode = "en-us"
 # Site language. Available translations in the theme's `/i18n` directory.
