--- a/hugo.toml
+++ b/hugo.toml
@@ -1,9 +1,11 @@
 baseURL = 'https://mjhall3.github.io/blog/'
 title = "Michael's Creative Corner"
-theme = 'hugo-universal-theme'
+theme = "hugo-universal-theme"
 languageCode = "en-us"
 # Site language. Available translations in the theme's `/i18n` directory.
 defaultContentLanguage = "en"
+
+#style = "default"
 
 # number of words of summarized post content (default 70)
 summaryLength = 70
@@ -32,17 +34,21 @@ id = ""
     url        = "/"
     weight     = 1
 
-[[menu.main]]
-    name       = "Blog"
-    identifier = "section.ap-blog"
-    url        = "/blog/"
-    weight     = 3
-    parent     = "menu.allpages"
-    post       = 4
+#[[menu.main]]
+#    name       = "Blog"
+#    identifier = "section.ap-blog"
+#    url        = "/blog/"
+#    weight     = 3
+#    parent     = "menu.allpages"
+#    post       = 4
 
 [params]
     viewMorePostLink = "/blog/"
     author = "Michael Hall"
+    defaultKeywords = ["personal blog", "book reviews", "books"]
+
+    about_us = "<p>Michael Hall is a university lecturer at Washington University in St. Louis with a PhD in Computer Engineering. He is passionate about technology, faith, reading, and fitness. Michael enjoys writing book reviews to help fellow authors promote their work and actively supports his wife’s artistic endeavors.</p>"
+
 
 [permalinks]
     blog = "/blog/:year/:month/:day/:filename/"
