--- a/hugo.toml
+++ b/hugo.toml
@@ -6,8 +6,6 @@ languageCode = "en-us"
 # Site language. Available translations in the theme's `/i18n` directory.
 defaultContentLanguage = "en"
 
-#style = "default"
-
 # number of words of summarized post content (default 70)
 summaryLength = 70
 
@@ -36,32 +34,32 @@ id = ""
     weight     = 1
 
 [[menu.main]]
-    name       = "Categories"
-    identifier = "section.categories"
-    url        = "/categories/"
-    weight     = 4
-    post       = 1
-
-[[menu.main]]
     name       = "Blog"
-    identifier = "section.blog"
+    identifier = "menu.blog"
     url        = "/blog/"
     weight     = 3
-    post       = 1
+    post       = 2
+
+[[menu.main]]
+    name       = "Categories"
+    identifier = "menu.categories"
+    url        = "/categories/"
+    weight     = 4
+    post       = 3
 
 [[menu.main]]
     name       = "Contact"
-    identifier = "section.contact"
+    identifier = "menu.contact"
     url        = "/contact/"
     weight     = 15
-    post       = 1
+    post       = 4
 
 [[menu.main]]
     name       = "About"
-    identifier = "section.about"
+    identifier = "menu.about"
     url        = "/about/"
     weight     = 10
-    post       = 1
+    post       = 5
 
 [[menu.topbar]]
     weight = 4
@@ -73,6 +71,7 @@ id = ""
     viewMorePostLink = "/blog/"
     author = "Michael Hall"
     defaultKeywords = ["personal blog", "book reviews", "books"]
+    defaultDescription = ""
     mainSections = ["blog"]
 
     # Style options: default (light-blue), blue, green, marsala, pink, red, turquoise, violet
@@ -84,6 +83,9 @@ id = ""
     date_format = "January 2, 2006"
 
     dropdown_mouse_over = false
+
+    disabled_logo = true
+    logo_text = "Michael's Creative Corner"
 
 #    email = "mjhall3 AT fastmail DOT net"
 
