--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,8 @@
-baseURL = 'https://mjhall3.github.io/blog/'
+#baseURL = 'https://mjhall3.github.io/blog/'
 #baseURL = 'http://localhost:1313/blog'
+baseURL = 'http://localhost:1313'
+#baseURL = ""
+#canonifyURLs = true
 title = "Michael's Creative Corner"
 theme = "hugo-universal-theme"
 languageCode = "en-us"
