--- a/hugo.toml
+++ b/hugo.toml
@@ -34,7 +34,7 @@ id = ""
     author = "Michael Hall"
     defaultKeywords = ["personal blog", "book reviews", "books"]
     defaultDescription = ""
-#    mainSections = ["book reviews", "blog"]
+#    mainSections = ["book-reviews", "blog"]
     mainSections = ["book-reviews"]
 
     default_sharing_image = "img/engineering-banner.jpg"
